--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,10 @@
-name: Hello World
+name: Github-action-learning
 
-on:
-  push:
-    branches:
-      - dev
+on: [push]
 
 jobs:
-  build:
+  First-test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Print Hello World
-      run: echo "Hello, World!"
+    -name: setting an error message
+     run: echo "::error::Missing semicolon"
